--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -60,6 +60,7 @@ main.class=Test
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=JDK_1.8
+project.license=mit
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
